--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@
 
                     <div class="main-bg">
                         <video
+                           playsinline
+                                    autoplay
+                                    loop
                             src="./assets/images/content/main-bg.mp4"
                         ></video>
                     </div>
