--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
 
                     <div class="main-bg">
                         <video
-                           playsinline
+                                    muted
+                                    playsinline
                                     autoplay
                                     loop
                             src="./assets/images/content/main-bg.mp4"
@@ -345,6 +346,7 @@
 
                             <div class="purset-video">
                                 <video
+                                    muted
                                     playsinline
                                     autoplay
                                     loop
